careers / testimonials update w changes from toby

--- a/careers.html
+++ b/careers.html
@@ -81,7 +81,7 @@
                             <h4>Robert Brown</h4>
                         </div>
                     </div>
-                    <p>I received my degree from PCI. I was interested in opening a for-profit college for <strong>graphic design</strong>, and I was told they had <strong>mentors and teachers</strong> from the <strong>top for-profit art institutes</strong>. I was told I would be getting a <strong>paid fellowship</strong> at a <strong>leading graphic design</strong> university, which turned out to be an undergraduate student who had me do his laundry. Although I was expecting my <strong>advanced degree</strong> to be in business management, my diploma says associates in retail management. I was so mad I skipped my <strong>long-awaited graduation.</strong></p>
+                    <p>I received my degree from PCI. I wanted to <strong>open a for-profit college</strong> for <strong>graphic design</strong>, and I was told they had <strong>mentors and connections</strong> from the <strong>top for-profit art institutes</strong>. I believed I would receive a <strong>prestigious paid fellowship</strong> at a <strong>leading graphic design</strong> university. Instead, PCI gave me an internship with an undergraduate design student. I perfected his coffee order, but received no <strong>real-life experience</strong>. Maybe I can <strong>open a business</strong> - a personal assistant business. </p>
                 </div>
 
                 <div class="row featured-box">
@@ -97,7 +97,9 @@
                             <h4>Nina Wallace</h4>
                         </div>
                     </div>
-                    <p>After a few weeks, I regretted my mistake when I decided to <strong>choose this school</strong>. The school promised <strong>hands-on and thorough training</strong> for federal finance management. Instead, the instructors were in<strong>experienced</strong> and just handed us FAFSA forms to memorize. The training was almost all useless, rather than <strong>comprehensive</strong> as promised. I received no <strong>useful training</strong>. My <strong>specific</strong>, financial questions remained unanswered.</p>
+                    <p>I knew I made a mistake when I decided to <strong>choose this school</strong> after just a few classes. My teachers were <strong>continuously learning</strong> as they taught instead of being <strong>prepared</strong>. They weren’t <strong>hands-on</strong> and just gave us a workbook of financial forms and rarely showed up <strong>on time</strong>. I still remain in the dark about the <strong>intricacies of proprietary schools</strong>.
+
+</p>
                 </div>
 
                 <div class="row featured-box">
@@ -113,7 +115,7 @@
                             <h4>Richard Belding</h4>
                         </div>
                     </div>
-                    <p>The program I was talked into did not have <strong>access to the spacious boardrooms</strong> that convinced me to attend on a tour of the PCI campus. I was also told that students graduated <strong>ready to open their own for-profit institution</strong>, but banks laughed me back to my middle-management job when I applied for loans. The advisors and recruiters told me what I wanted to hear and <strong>sold me on their program</strong>, but really they had no idea about the program and the specific field I wanted to get into. They did not have my <strong>best interests in mind.</strong> </p>
+                    <p>When I went on a tour of the PCI campus, they showed me <strong>spacious boardrooms for business meetings</strong> that convinced me this institute had everything I needed. But then our program wasn’t allowed <strong>access to the professional facilities</strong>. My admissions officer told me students graduated <strong>ready to open their own for-profit institution</strong>, but banks laughed me back to my middle-management job when I applied for loans.  </p>
                 </div>
 
             </section>
