--- a/aid.html
+++ b/aid.html
@@ -62,45 +62,60 @@
 			<section class="col-sm-12">
 				<br>
 				<p>
-					We know how stressful it can be when it comes to applying for Federal assistance to help with your educational needs. By completing the Free Application for Federal Student Aid (FAFSA), you will be able to apply for federal aid, such as PELL grants and Direct Loans. We have prepared a step-by-step guide that we think can assist you in the financial aid process. If you have questions during this process, you may contact our Financial Aid office at 210-298-2046.
+					At The Proprietary Career Institute, we understand how stressful paying for school can be. But we’re here to help you invest in yourself by investing in your education. Don’t let the initial price tag of our valuable institution stop you from envisioning your rise to the top of the proprietary college field. 
 				</p>
+				<h4>
+					This investment can lead to a bright future for you and your family. Where will you be without it?
+				</h4>
 			</section>
 		</div>
 		<div class="row">
 			<!-- Article content -->
 			<section class="col-sm-12 maincontent">
 				<img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300">
-				<h3>Step-by-Step Guide to Applying for Federal Student Aid</h3>
+				<h3>Our admissions officers will work with you to explore the options available to you, including:
+				</h3>
 				<p>
-					<ul>
-						<li>
-							<strong>Step 1: </strong>Determine your status. To find out if you will need to provide your parent(s) information on the FAFSA, please click here and answer all the questions. After you have answered all the questions, please click Submit. You will receive a message indicating that you are either Independent or Dependent. If you are Dependent, then you will need your parent(s) to provide his/her/their information in the FAFSA.
-						</li>
-						<li>
-							<strong>Step 2: </strong>Gather all the information you will need to complete the FAFSA prior to starting the FAFSA process. Click here to see the list of items you will need to complete the FAFSA. 
-							<br>
-							If you are Dependent, your parents will need to gather all of their information regarding their income to add to the FAFSA. Click here to see the list of items your parent(s) will need to complete the FAFSA.
-						</li>
-						<li>
-							<strong>Step 3: </strong> Do you have a Personal Identification Number (PIN)? If yes, proceed to Step 4. If no, please go to www.pin.ed.gov and follow the instructions to obtain a PIN. You will need your PIN to electronically sign your FAFSA. Once you have established the PIN, go back to the PIN home page and click ‘Activate My Pin’. Input the required information and submit. Please remember that your PIN is not to be shared with anyone.
-							<br>
-							If you are a Dependent student, your parent will need to apply for a PIN, if he or she does not already have one. Your parent will follow the same procedure as you did to obtain a PIN. Remember, your parent will also need to click ‘Activate My PIN’ on the PIN home page.
-						</li>
-						<li>
-							<strong>Step 4: </strong> Begin the FAFSA process. Go to www.fafsa.ed.gov. Proceed through the FAFSA by inputting required information. Be sure to add our school code: 025911.
-						</li>
-						<li>
-							<strong>Step 5: </strong>Once the FAFSA is complete, you will receive a Confirmation Page. Please print this page. If you are not able to print it, you may write down your EFC (Estimate Family Contribution) number and the DRN, which is located at the top right. Keep this information as a reference. You will receive an email notification that your FAFSA was submitted successfully. Please forward this email to your Admissions Coordinator.  If you have not talked to an Admissions Coordinator, please call 800-485-0614 to set up an appointment.
-						</li>
-						<li>
-							<strong>Step 6: </strong>Once the Confirmation Page has been sent to financial aid, you will receive a call within 24-48 hours to discuss the completion of your financial aid packaging.
-						</li>
-					</ul>
-					<h4>Congratulations on completing your FAFSA!  We look forward to assisting you with your financial aid needs.</h4>
-
-					</ol>
+					<div class="col-md-8">
+							<div class="featured-list">
+								<i class="fa fa-money"></i>
+								<div class="text">
+									<h4>scholarships!</h4>
+								</div>
+							</div>
+							<div class="featured-list">
+								<i class="fa fa-graduation-cap"></i>
+								<div class="text">
+									<h4>grants!</h4>
+								</div>
+							</div>
+							<div class="featured-list">
+								<i class="fa fa-usd"></i>
+								<div class="text">
+									<h4>private loans!</h4>
+								</div>
+							</div>
+							<div class="featured-list">
+								<i class="fa fa-university"></i>
+								<div class="text">
+									<h4>federal student loans!</h4>
+								</div>
+							</div>
+							<div class="featured-list">
+								<i class="fa fa-smile-o"></i>
+								<div class="text">
+									<h4>federal student loans plus private loans!</h4>
+								</div>
+							</div>
+							<div class="featured-list">
+								<i class="fa fa-thumbs-up"></i>
+								<div class="text">
+									<h4>loan deferment!</h4>
+								</div>
+							</div>
+							<h3>Almost anyone can apply for federal student loan aid. Make sure you give it a try.</h3>
+						</div>
 				</p>
-
 			</section>
 		</div>
 	</div>
@@ -138,6 +153,74 @@
 		</ul>
 		<br>
 	</section>
+
+<!-- plans -->
+	<section class="container">
+		<div class="heading">
+			<!-- Heading -->
+			<h2>Our Plans</h2>
+			<p>Our plans are cost-effective and tailored to give you the best PCI experience you and your loans can pay for. If you qualify to defer payments, you won’t have to worry about how to pay off those loans until after you graduate. Our admissions officers will quickly walk you through these fees and sign you up so you can start as soon as possible. <strong>Act now</strong>- classes are filling up fast.</p>
+			<br />
+		</div>
+		<div class="row flat">
+			<div class="col-lg-3 col-md-3 col-xs-6">
+				<ul class="plan plan1">
+					<li class="plan-name">Standard
+					</li>
+					<li class="plan-price">
+						<strong>$28,000</strong> Tuition
+					</li>
+					<li>
+						Includes:
+					</li>
+					<li>
+						Standard <strong>Degree</strong>
+					</li>
+					<li>
+						<strong>$50</strong> Men's Warehouse stipend <em>suits required</em>
+					</li>
+					<li>
+						<em>Additional Fees</em>
+					</li>
+					<li class="plan-action">
+						<a href="./contact.html" class="btn">Signup</a>
+					</li>
+				</ul>
+			</div>
+
+			<div class="col-lg-3 col-md-3 col-xs-6">
+				<ul class="plan plan2 featured">
+					<li class="plan-name">Elite
+					</li>
+					<li class="plan-price">
+						<strong>$33,000</strong> Tuition
+					</li>
+					<li>
+						Includes:
+					</li>
+					<li>
+						<strong>Elite</strong> Degree
+					</li>
+					<li>
+						<strong>$150</strong> Men's Warehouse stipend <em>suits required</em>
+					</li>
+					<li>
+						<strong>2</strong> free boardroom reservations
+					</li>
+					<li>
+						<em>Additional fees</em>
+					</li>
+					<li class="plan-action">
+						<a href="./contact.html" class="btn">Signup</a>
+					</li>
+				</ul>
+			</div>
+
+			
+		</div>
+	</section>
+
+<!-- end plans -->
 
 	<!-- footer -->
 	<footer id="footer">
