--- a/why.html
+++ b/why.html
@@ -85,11 +85,11 @@
 
 									<article class="col-sm-4 isotopeItem webdesign">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img1.jpg" alt="" />
+											<img src="assets/images/why/TheMarket_6.jpg" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img1.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="assets/images/why/TheMarket_6.jpg" class="fancybox">
+														<h5>The market</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
