courses updates from toby

--- a/courses.html
+++ b/courses.html
@@ -72,8 +72,8 @@
 					<div class="featured-box">
 						<i class="fa fa-sitemap fa-2x"></i>
 						<div class="text">
-							<h3>“Technical” Compliance</h3>
-							Some states require schools to reveal graduation rates and job data. But don’t worry-- in this class we’ll cover the nuances of “clearly and conspicuously,” and exactly where to hide a non-searchable PDF of this information on your websites.
+							<h3>Technical "Compliance"</h3>
+							All states require schools to reveal graduation rates and job data. But don’t worry-- in this class we’ll cover the nuances of “clearly and conspicuously,” and exactly where to hide a non-searchable PDF of this information on your websites.
 						</div>
 					</div>
 				</div>
@@ -93,7 +93,7 @@
 						<i class="fa fa-compass fa-2x"></i>
 						<div class="text">
 							<h3>Copywriting & Obfuscation </h3>
-							Our writing center empowers students to craft beautifully vague copy for all of their marketing needs. Learn to explain your for-profit educational institution without revealing core elements, such as a lack of proper accreditation, poor job placement records, or convoluted financing plans. 
+							Our writing center empowers students to craft beautifully vague copy for all of their marketing needs. Learn to explain your for-profit educational institution without revealing core elements, such as non-standard accreditation, poor job placement records, or convoluted financing plans. 
 						</div>
 					</div>
 				</div>
