--- a/why.html
+++ b/why.html
@@ -3,16 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
-	<meta name="author" content="PCI">
-	<title>Proprietary Career Institute - Why?</title>
+	<meta name="description" content="eLearning is a modern and fully responsive Template by WebThemez.">
+	<meta name="author" content="webThemez.com">
+	<title>eLearning - Free Educational Responsive Web Template </title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="assets/css/da-slider.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/isotope.css" media="screen" />
+	<link rel="stylesheet" href="assets/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -28,7 +29,7 @@
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/pci_logo_long_300.png" alt="PCI logo"></a>
+					<img src="assets/images/pci_logo_long_750.png" alt="PCI logo"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
@@ -71,19 +72,12 @@
 
 
 					<div class="row">
-						<nav id="filter" class="col-md-12 text-center">
-							<ul>
-								<li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".webdesign">Web Design</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".photography">Photography</a></li>
-								<li><a href="#" class="btn-theme btn-small" data-filter=".print">Print</a></li>
-							</ul>
-						</nav>
+
 						<div class="col-md-12">
 							<div class="row">
 								<div class="portfolio-items isotopeWrapper clearfix" id="3">
 
-									<article class="col-sm-4 isotopeItem webdesign">
+									<article class="col-sm-4 isotopeItem">
 										<div class="portfolio-item">
 											<img src="assets/images/why/TheMarket_6.jpg" alt="" />
 											<div class="portfolio-desc align-center">
@@ -96,13 +90,13 @@
 										</div>
 									</article>
 
-									<article class="col-sm-4 isotopeItem photography">
+									<article class="col-sm-4 isotopeItem">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img2.jpg" alt="" />
+											<img src="assets/images/why/PoliticalContributions-01.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img2.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="assets/images/why/PoliticalContributions-01.png" class="fancybox">
+														<h5>Political Contributions</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
@@ -110,13 +104,13 @@
 									</article>
 
 
-									<article class="col-sm-4 isotopeItem photography">
+									<article class="col-sm-4 isotopeItem">
 										<div class="portfolio-item">
-											<img src="assets/images/portfolio/img3.jpg" alt="" />
+											<img src="assets/images/why/DefaultAds-01.png" alt="" />
 											<div class="portfolio-desc align-center">
 												<div class="folio-info">
-													<a href="assets/images/portfolio/img3.jpg" class="fancybox">
-														<h5>Project Title</h5>
+													<a href="assets/images/why/DefaultAds-01.png" class="fancybox">
+														<h5>Loan Default</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
