feature box adjustments

--- a/courses.html
+++ b/courses.html
@@ -65,6 +65,12 @@
 						<div class="text">
 							<h3>Understanding Federal Loopholes</h3>
 							The federal government assists students by providing loans with public money. This course will teach you how to structure your finances to capture the largest amount of public funds.
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
 						</div>
 					</div>
 				</div>
@@ -74,6 +80,11 @@
 						<div class="text">
 							<h3>Technical "Compliance"</h3>
 							All states require schools to reveal graduation rates and job data. But don’t worry-- in this class we’ll cover the nuances of “clearly and conspicuously,” and exactly where to hide a non-searchable PDF of this information on your websites.
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
+							<br>&nbsp;
 						</div>
 					</div>
 				</div>
@@ -94,6 +105,8 @@
 						<div class="text">
 							<h3>Copywriting & Obfuscation </h3>
 							Our writing center empowers students to craft beautifully vague copy for all of their marketing needs. Learn to explain your for-profit educational institution without revealing core elements, such as non-standard accreditation, poor job placement records, or convoluted financing plans. 
+							<br>&nbsp;
+							<br>&nbsp;
 						</div>
 					</div>
 				</div>
@@ -103,6 +116,8 @@
 						<div class="text">
 							<h3>Student Recruitment Strategies</h3>
 							Don’t Take No for an Answer! This course will give you the tools to recruit as many students as you can using time-honored high pressures sales tactics. For instance, we’ll teach you how to target older adult students through traditional advertising in newspapers and television.
+							<br>&nbsp;
+							<br>&nbsp;
 						</div>
 					</div>
 				</div>
@@ -110,7 +125,7 @@
 					<div class="featured-box">
 						<i class="fa fa-usd fa-2x"></i>
 						<div class="text">
-							<h3>Juking the Stats 101: Career Placement Numbers</h3>
+							<h4>Juking the Stats 101: Career Placement Numbers</h4>
 							Job placement is hard. Factories shut down and corporations move overseas. Your institutions should still seek to entice prospective students with the promise of opportunity. This course will teach you how to establish direct postgraduate student employment with your own organization (or your friends’) to enhance your statistical success rates.
 						</div>
 					</div>
