--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@ function elizaStep() {
 					<div class="featured-box">
 						<i class="fa fa-money fa-2x"></i>
 						<div class="text">
-							<h4>Preparing entrepreneurs to turn education into dollars.</h4>
+							<h4>Preparing entrepreneurs to turn education into dollars.
+								<br>&nbsp;
+							    <br>&nbsp;</h4>
 						</div>
 					</div>
 				</div>
