--- a/why.html
+++ b/why.html
@@ -51,7 +51,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
-					<h1>Why For Profit?</h1>
+					<h1>Why For-Profit?</h1>
 				</div>
 			</div>
 		</div>
