namegen blank page

--- a/courses.html
+++ b/courses.html
@@ -65,11 +65,8 @@
 						<div class="text">
 							<h3>Understanding Federal Loopholes</h3>
 							The federal government assists students by providing loans with public money. This course will teach you how to structure your finances to capture the largest amount of public funds.
-							<br>&nbsp;
-							<br>&nbsp;
-							<br>&nbsp;
-							<br>&nbsp;
-							<br>&nbsp;
+							<br><br>
+							It will also cover renaming your organization to avoid discreditation. <a href="namegen.html">Click here for a handy tool</a> to explore school name possibilities!
 							<br>&nbsp;
 						</div>
 					</div>
