--- a/namegen.html
+++ b/namegen.html
@@ -71,11 +71,11 @@
 				<!-- social sharing -->
 				<div class="social text-center">
 					<strong>Share this:</strong><br>
-					<a href="https://twitter.com/home?status=Generate%20a%20name%20for%20your%20school%20http://pci-institute.com/namegen.html%20@ProprietaryCI%20"><i class="fa fa-twitter"></i></a>
-					<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/namegen.html"><i class="fa fa-facebook"></i></a>
-					<a href="https://plus.google.com/share?url=http://pci-institute.com/namegen.html"><i class="fa fa-google-plus"></i></a>
-					<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/namegen.html&title=Proprietary%20Career%20Institute%20School%20Name%20Generator&summary=Craft%20a%20unique%20name%20for%20your%20next%20business%20endeavor%20and%20ensure%20success!&source="><i class="fa fa-linkedin"></i></a>
-					<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/namegen.html&description=Craft%20a%20unique%20name%20for%20your%20next%20business%20endeavor%20and%20ensure%20success!"><i class="fa fa-pinterest-p"></i></a>
+					<a href="https://twitter.com/home?status=Generate%20a%20name%20for%20your%20school%20http://pci-institute.com/namegen.html%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/namegen.html" target="blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://plus.google.com/share?url=http://pci-institute.com/namegen.html" target="blank"><i class="fa fa-google-plus"></i></a>
+					<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/namegen.html&title=Proprietary%20Career%20Institute%20School%20Name%20Generator&summary=Craft%20a%20unique%20name%20for%20your%20next%20business%20endeavor%20and%20ensure%20success!&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/namegen.html&description=Craft%20a%20unique%20name%20for%20your%20next%20business%20endeavor%20and%20ensure%20success!" target="blank"><i class="fa fa-pinterest-p"></i></a>
 			    </div>
 			    <!-- end social sharing -->
 			</aside>
