--- a/why.html
+++ b/why.html
@@ -87,6 +87,13 @@
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=For-profit%20market%20share%20http://pci-institute.com/assets/images/why/TheMarket_6.jpg%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/TheMarket_6.jpg" target="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/TheMarket_6.jpg" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/TheMarket_6.jpg&title=Proprietary%20Career%20Institute%20-%20Understand%20the%20Market&summary=A%20great%20summary%20of%20the%20market%20in%20for-profit%20schooling&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/TheMarket_6.jpg&description=A%20great%20summary%20of%20the%20market%20in%20for-profit%20schooling" target="blank"><i class="fa fa-pinterest-p"></i></a>
+											</div>
 										</div>
 									</article>
 
@@ -99,6 +106,13 @@
 														<h5>Political Contributions</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
+											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=For-profit%20schools'%20political%20contributions%20http://pci-institute.com/assets/images/why/PoliticalContributions-01.png%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/PoliticalContributions-01.png" taget="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/PoliticalContributions-01.png" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/PoliticalContributions-01.png&title=Proprietary%20Career%20Institute%20-%20Political%20Contributions&summary=The%20for-profit%20college%20industry%20relies%20on%20government%20support,%20and%20our%20alumni%20do%20their%20best%20to%20support%20those%20in%20charge!&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/PoliticalContributions-01.png&description=The%20for-profit%20college%20industry%20relies%20on%20government%20support,%20and%20our%20alumni%20do%20their%20best%20to%20support%20those%20in%20charge!" target="blank"><i class="fa fa-pinterest-p"></i></a>
 											</div>
 										</div>
 									</article>
@@ -113,6 +127,13 @@
 														<h5>Loan Default</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
+											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=Be%20There%20for%2080%25%20of%20Your%20Students%20http://pci-institute.com/assets/images/why/DefaultAds-01.png%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/DefaultAds-01.png" target="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/DefaultAds-01.png" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/DefaultAds-01.png&title=Proprietary%20Career%20Institute%20-%20Default%20Rates&summary=Be%20There%20for%2080%25%20of%20Your%20Students%20-%20You%20care%20about%20the%20students%20you%20teach%20and%20so%20do%20we.%20PCI%20can%20help%20you%20help%20them%20meet%E2%80%94or%20even%20exceed%E2%80%94minimum%20loan%20payments%20for%20three%20years.%0A&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/DefaultAds-01.png&description=Be%20There%20for%2080%25%20of%20Your%20Students%20-%20You%20care%20about%20the%20students%20you%20teach%20and%20so%20do%20we.%20PCI%20can%20help%20you%20help%20them%20meet%E2%80%94or%20even%20exceed%E2%80%94minimum%20loan%20payments%20for%20three%20years." target="blank"><i class="fa fa-pinterest-p"></i></a>
 											</div>
 										</div>
 									</article>
@@ -129,6 +150,13 @@
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=Opportunities%20Far%20%26%20Wide%20http://pci-institute.com/assets/images/why/mapping_flagship-01.png%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/mapping_flagship-01.png" target="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/mapping_flagship-01.png" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/mapping_flagship-01.png&title=Proprietary%20Career%20Institute%20-%20Opportunities%20Far%20%26%20Wide&summary=PCI%20will%20help%20you%20identify%20states%20friendliest%20to%20your%20for-profit%20ambitions.%0A&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/mapping_flagship-01.png&description=Opportunities%20Far%20%26%20Wide%20-%20PCI%20will%20help%20you%20identify%20states%20friendliest%20to%20your%20for-profit%20ambitions." target="blank"><i class="fa fa-pinterest-p"></i></a>
+											</div>
 										</div>
 									</article>
 
@@ -142,6 +170,13 @@
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
 											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=A%20Growing%20Industry%20http://pci-institute.com/assets/images/why/percentincrease_1.jpg%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/percentincrease_1.jpg" target="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/percentincrease_1.jpg" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/percentincrease_1.jpg&title=Proprietary%20Career%20Institute%20-%20A%20Growing%20Industry&summary=Proprietary%20college%20enrollment%20is%20exploding%E2%80%94along%20with%20your%20fortunes!%0A&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/percentincrease_1.jpg&description=A%20Growing%20Industry%20-%20Proprietary%20college%20enrollment%20is%20exploding%E2%80%94along%20with%20your%20fortunes!" target="blank"><i class="fa fa-pinterest-p"></i></a>
+											</div>
 										</div>
 									</article>
 
@@ -154,6 +189,13 @@
 														<h5>Visualizing Loans</h5>
 														<i class="fa fa-link fa-2x"></i></a>
 												</div>
+											</div>
+											<div class="social-sm text-center">
+												<a href="https://twitter.com/home?status=Easy%20Money%20http://pci-institute.com/assets/images/why/VisualizingLoans-01.png%20@ProprietaryCI%20" target="blank"><i class="fa fa-twitter"></i></a>
+												<a href="https://www.facebook.com/sharer/sharer.php?u=http://pci-institute.com/assets/images/why/VisualizingLoans-01.png" target="blank"><i class="fa fa-facebook"></i></a>
+												<a href="https://plus.google.com/share?url=http://pci-institute.com/assets/images/why/VisualizingLoans-01.png" target="blank"><i class="fa fa-google-plus"></i></a>
+												<a href="https://www.linkedin.com/shareArticle?mini=true&url=http://pci-institute.com/assets/images/why/VisualizingLoans-01.png&title=Proprietary%20Career%20Institute%20-%20Easy%20Money&summary=The%20federal%20government%20is%20committed%20to%20helping%20you%20achieve%20your%20dream%20of%20lucrative%20for-profit%20college%20ownership.%0A&source=" target="blank"><i class="fa fa-linkedin"></i></a>
+												<a href="https://pinterest.com/pin/create/button/?url=http://pci-institute.com&media=http://pci-institute.com/assets/images/why/VisualizingLoans-01.png&description=Easy%20Money%20-%20The%20federal%20government%20is%20committed%20to%20helping%20you%20achieve%20your%20dream%20of%20lucrative%20for-profit%20college%20ownership." target="blank"><i class="fa fa-pinterest-p"></i></a>
 											</div>
 										</div>
 									</article>
